objects/ChargentSFA__Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>CASESAFEID(ChargentSFA__Opportunity__r.Account.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affiliate_Fee__c</fullName>
        <description>Affiliate fee %</description>
        <formula>CASE(ChargentSFA__Opportunity__r.Main_Lead_Source__c,
&quot;Elite Legacy&quot;, 0.4,
&quot;Nick Vertucci-NVREA&quot;, 0.4,
&quot;Don Pendleton&quot;, 0.3,
&quot;Dani Johnson&quot;, 0.2,
&quot;Affiliate&quot;, 0.2,
0) * ( ChargentSFA__Amount__c -  Filing_Fee_Check__c )</formula>
        <label>Affiliate Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Affiliate_Marketing_Date_Filter__c</fullName>
        <formula>IF(AND( DATEVALUE( ChargentSFA__Gateway_Date__c )  &gt;= DATE(YEAR(TODAY() - 59),
                                                           MONTH(TODAY()- 59),26),
        DATEVALUE( ChargentSFA__Gateway_Date__c )  &lt;= DATE(YEAR(TODAY() - 29),
                                                           MONTH(TODAY() - 29),25)
       ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Marketing Date Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <description>Used for affiliate marketing reports. Checks to see if more than a yr has expired since affiliate lead was created.</description>
        <formula>IF(  ChargentSFA__Opportunity__r.Account.First_Closed_Sale_Affiliate__c  &lt; NOW() - 365, FALSE, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__AVS_International__c</fullName>
        <inlineHelpText>Results of the AVS International check</inlineHelpText>
        <label>AVS International</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__AVS_Response_Code__c</fullName>
        <inlineHelpText>Results of the AVS Street Address check or any single AVS response</inlineHelpText>
        <label>AVS Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__AVS_Zip__c</fullName>
        <inlineHelpText>Results of the AVS Zip check</inlineHelpText>
        <label>AVS Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Amount_available_for_Refund__c</fullName>
        <label>Amount available for Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Authorization__c</fullName>
        <label>Authorization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Account_Last_4__c</fullName>
        <label>Bank Account Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Account_Name__c</fullName>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Account_Status__c</fullName>
        <inlineHelpText>This field only works with certain gateways. See our documentations for more details.</inlineHelpText>
        <label>Transaction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Business Checking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Routing_Number__c</fullName>
        <label>Bank Routing Number (OLD - do not use)</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Bank_Transfer_Settlement_Date__c</fullName>
        <inlineHelpText>This field only works with certain gateways. See our documentations for more details.</inlineHelpText>
        <label>Settlement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Address_Line_2__c</fullName>
        <label>Billing Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Company__c</fullName>
        <label>Billing Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                    <default>true</default>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_First__c</fullName>
        <label>Billing First</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Last__c</fullName>
        <label>Billing Last</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_Province__c</fullName>
        <label>Billing Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Billing_State__c</fullName>
        <label>Billing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Card_Code_Response__c</fullName>
        <label>Security Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Card_Last_4__c</fullName>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Cash_Disbursement__c</fullName>
        <label>Cash Disbursement</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Cash_Receipt__c</fullName>
        <label>Cash Receipt</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Credit_Card_Name__c</fullName>
        <label>Credit Card Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>AMEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Customer_Token__c</fullName>
        <label>Customer Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Details_Payflow__c</fullName>
        <description>Link to Payflow Pro Details Page (must be logged in)</description>
        <formula>IF(
BEGINS(ChargentSFA__Gateway_ID__c, &quot;0&quot;), &quot;&quot;, HYPERLINK( &quot;https://manager.paypal.com/performSearchTransaction.do?searchType=transID&amp;searchTypePP=partialEmail&amp;firstName=&amp;searchValue=&quot; &amp; ChargentSFA__Gateway_ID__c  &amp; &quot;&amp;submitbutton=Submit&amp;subaction=search&amp;reportName=SearchTransaction&amp;MerchId=&amp;menukey=Unsettled&quot; , &quot;Details&quot;, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Payflow Pro Details Page (must be logged in)</inlineHelpText>
        <label>Details (Payflow Pro)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Details__c</fullName>
        <formula>IF(
BEGINS(ChargentSFA__Gateway_ID__c, &quot;0&quot;), &quot;&quot;, HYPERLINK( &quot;https://account.authorize.net/UI/themes/anet/merch.aspx?page=history&amp;sub=detail&amp;transID=&quot; &amp; ChargentSFA__Gateway_ID__c  &amp; &quot;&amp;MerchId=&amp;menukey=Unsettled&quot; , &quot;Details&quot;, &quot;_blank&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Gateway transaction details</inlineHelpText>
        <label>Details (Authorize.net)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Gateway_Date__c</fullName>
        <label>Gateway Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Gateway_ID__c</fullName>
        <label>Gateway ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Gateway_Response__c</fullName>
        <label>Gateway Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gateway</label>
        <referenceTo>ChargentBase__Gateway__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Ignore_In_PC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ignore In Payment Console</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Client Referral Credit</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Credit to be used</fullName>
                </value>
                <value>
                    <fullName>PayPal</fullName>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>ChargentSFA__Payment_Request__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Reason_Code__c</fullName>
        <label>Reason Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Reason_Text__c</fullName>
        <label>Reason Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this transaction was created as part of a recurring payment schedule</inlineHelpText>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Response_Code__c</fullName>
        <label>Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Response_Message__c</fullName>
        <label>Response Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Response_Status__c</fullName>
        <label>Response Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Response__c</fullName>
        <label>Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Settlement_Time__c</fullName>
        <label>Settlement Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Tokenization__c</fullName>
        <label>Tokenization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Charge</fullName>
                    <default>true</default>
                    <label>Charge</label>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Requested_Refund__c</fullName>
        <description>Mirrors the opportunity field of the same name.</description>
        <label>Client Requested Refund</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Account.Name</formula>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Run__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for import/export of records.</description>
        <inlineHelpText>Used for import/export of records.</inlineHelpText>
        <label>Commission Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedByProfile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedByProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Title_Transaction__c</fullName>
        <description>Title of employee who created the transaction. Used by HR to calculate bonuses.</description>
        <formula>CreatedBy.Title</formula>
        <label>Created By (Title)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Account.E_Mail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Fee_Check__c</fullName>
        <description>Used for HR Bonuses</description>
        <formula>IF(  ChargentSFA__Gateway_Date__c  = ChargentSFA__Opportunity__r.First_Transaction__c,  ChargentSFA__Opportunity__r.Total_Filing_Fees__c +  ChargentSFA__Opportunity__r.Registered_Agent__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filing Fee Check</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filing_Fees_Affiliate__c</fullName>
        <description>For Affiliate Marketing Reports</description>
        <formula>IF(  ChargentSFA__Gateway_Date__c  = ChargentSFA__Opportunity__r.First_Transaction__c,  ChargentSFA__Opportunity__r.Total_Filing_Fees__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filing Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Account.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Transaction_Month__c</fullName>
        <formula>IF(DATE(
     YEAR(DATEVALUE(ChargentSFA__Gateway_Date__c )),
     MONTH(DATEVALUE(ChargentSFA__Gateway_Date__c )),
     1
) = 
DATE(
     YEAR(DATEVALUE( ChargentSFA__Opportunity__r.First_Transaction__c )),
     MONTH(DATEVALUE(ChargentSFA__Opportunity__r.First_Transaction__c )),
     1
), TRUE, FALSE)</formula>
        <label>First Transaction Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate__c</fullName>
        <label>Generate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>ChargentSFA__Opportunity__r.QB_Invoice_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Account.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Lead_Source_Transaction__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Main_Lead_Source_Account__c</formula>
        <label>Main Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Commissionable_Affiliate__c</fullName>
        <formula>IF( ChargentSFA__Gateway_Date__c = ChargentSFA__Opportunity__r.First_Transaction__c,  ChargentSFA__Opportunity__r.Total_Non_Commissionable_Amount__c  ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-Commissionable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_First_Transaction__c</fullName>
        <formula>DATE(
     YEAR(DATEVALUE(ChargentSFA__Opportunity__r.First_Transaction__c)),
     MONTH(DATEVALUE(ChargentSFA__Opportunity__r.First_Transaction__c)),
     1
)</formula>
        <label>Opp First Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_2nd_Sales_Rep__c</fullName>
        <formula>TEXT(ChargentSFA__Opportunity__r.X2nd_Sales_Rep__c)</formula>
        <label>Opportunity 2nd Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Primary_Campaign_Source__c</fullName>
        <formula>TEXT(ChargentSFA__Opportunity__r.Campaign.Type)</formula>
        <label>Opportunity Primary Campaign Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sales_Rep__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Sales_Rep__r.Name</formula>
        <label>Opportunity Sales Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Campaign_Source_Opp__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Original_Campaign_Source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Campaign Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pay_Period__c</fullName>
        <formula>IF(DAY( DATEVALUE(ChargentSFA__Gateway_Date__c) ) &lt;= 15, &apos;A&apos;, &apos;B&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Error__c</fullName>
        <label>Payment Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Id__c</fullName>
        <externalId>true</externalId>
        <label>Payment Id</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Month_Transaction_Mirror__c</fullName>
        <description>Checked when a transaction occurred in the prior month.</description>
        <formula>IF(

Transaction_date__c  &gt;= 

DATE(
     YEAR(TODAY()),
     MONTH(TODAY()) -1,
     1
) &amp;&amp;

Transaction_date__c  &lt;=

DATE(
     CASE(MONTH(TODAY()), 12, YEAR(TODAY()) + 1, YEAR(TODAY())),
     CASE(MONTH(TODAY()), 12, 1, MONTH(TODAY() )),
     1
) - 1,

 TRUE, FALSE)</formula>
        <inlineHelpText>Checked when a transaction occurred in the prior month.</inlineHelpText>
        <label>Previous Month Transaction Mirror</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Month_Transaction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a transaction occurred in the prior month.</description>
        <inlineHelpText>Checked when a transaction occurred in the prior month.</inlineHelpText>
        <label>Previous Month Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QB_Payment_Mehtod__c</fullName>
        <formula>IF( TEXT(ChargentSFA__Payment_Method__c) = &apos;Credit Card&apos;,TEXT(ChargentSFA__Credit_Card_Type__c),TEXT(ChargentSFA__Payment_Method__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QB Payment Mehtod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QB_file__c</fullName>
        <formula>ChargentSFA__Opportunity__r.QB_file__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QB file</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks_File__c</fullName>
        <formula>ChargentSFA__Opportunity__r.QuickBooks_File__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuickBooks File</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Reason__c</fullName>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied to Another Sale</fullName>
                </value>
                <value>
                    <fullName>Duplicate Charge</fullName>
                </value>
                <value>
                    <fullName>Incorrect Amount Charged</fullName>
                </value>
                <value>
                    <fullName>Incorrect Card Used</fullName>
                </value>
                <value>
                    <fullName>Not Using the Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Oversold</fullName>
                </value>
                <value>
                    <fullName>Poor Service</fullName>
                </value>
                <value>
                    <fullName>Seven Day Refund Period</fullName>
                </value>
                <value>
                    <fullName>Tax Penalties</fullName>
                </value>
                <value>
                    <fullName>Unable to Fulfill</fullName>
                </value>
                <value>
                    <fullName>Client paid fee</fullName>
                </value>
                <value>
                    <fullName>Client Changed Mind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Request_Reason__c</fullName>
        <description>The reason why the client asked for a refund. Mirrors the opportunity field.</description>
        <label>Refund Request Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registered_Agent_Affiliate__c</fullName>
        <description>For Affiliate Marketing Reports</description>
        <formula>IF(  ChargentSFA__Gateway_Date__c  = ChargentSFA__Opportunity__r.First_Transaction__c, ChargentSFA__Opportunity__r.Registered_Agent__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registered Agent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Returned_Payment_Number__c</fullName>
        <label>Returned Payment Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Id_CTransactions__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Id</formula>
        <label>Sale Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale_Type__c</fullName>
        <formula>ChargentSFA__Opportunity__r.RecordType.Name</formula>
        <label>Sale Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Check__c</fullName>
        <description>Checks to see if 2nd Sales Rep is not blank.</description>
        <formula>IF(NOT(ISBLANK( TEXT(ChargentSFA__Opportunity__r.X2nd_Sales_Rep__c))), TRUE, FALSE)</formula>
        <label>Sales Rep Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Title__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Sales_Rep__r.Title_SalesRep__c</formula>
        <label>Sales Rep Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>Sales_Rep__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Items_List__c</fullName>
        <formula>ChargentSFA__Opportunity__r.Service_Item_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Items List</label>
        <type>Text</type>
    </fields>
</CustomObject>